# alpha_bot

./: README.md
alpha_bot_application/: CMakeLists.txt  package.xml
alpha_bot_bringup/: CMakeLists.txt  package.xml
alpha_bot_bringup/launch/: diff_drive.launch.py  rrbot_setup.launch.py
alpha_bot_description/: CMakeLists.txt  package.xml
alpha_bot_gazebo/: CMakeLists.txt  README.md  package.xml
alpha_bot_gazebo/include/alpha_bot_gazebo/: BasicSystem.hh  FullSystem.hh
alpha_bot_gazebo/src/: BasicSystem.cc  FullSystem.cc
alpha_bot_gazebo/worlds/: diff_drive.sdf
