<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alpha_bot_bringup</name>
  <version>0.0.0</version>
  <description>Contains launch files for the alpha_bot project</description>
  <license>Apache 2.0</license>
  <author>Vlad Fatu</author>
  <maintainer email="colegu123@gmail.com">Vlad Fatu</maintainer>

  <depend>joint_state_publisher_gui</depend>

  <depend>alpha_bot_description</depend>
  <depend>alpha_bot_gazebo</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

